==> Paciente8159/uCNC/uCNC/src/hal/mcus/esp8266/mcu_esp8266.c <==
#include "../../../cnc.h"
#include <string.h>
#include <stdbool.h>
#include <stdint.h>
#include <c_types.h>
#include "ets_sys.h"
#include "os_type.h"
#include "c_types.h"
#include "gpio.h"
#include "eagle_soc.h"
#include "uart_register.h"
#include "osapi.h"
#include "twi.h"
#define UART_PARITY_EN (BIT(1))
#define UART_PARITY_EN_M 0x00000001
#define UART_PARITY_EN_S 1
#define UART_PARITY (BIT(0))
#define UART_PARITY_M 0x00000001
#define UART_PARITY_S 0
#define ITP_SAMPLE_RATE (F_STEP_MAX * 2)

static FORCEINLINE void servo_reset(void)
{
#if ASSERT_PIN(SERVO0)
	io_clear_output(SERVO0);
#endif
#if ASSERT_PIN(SERVO1)
	io_clear_output(SERVO1);
#endif
#if ASSERT_PIN(SERVO2)
	io_clear_output(SERVO2);
#endif
#if ASSERT_PIN(SERVO3)
	io_clear_output(SERVO3);
#endif
#if ASSERT_PIN(SERVO4)
	io_clear_output(SERVO4);
#endif
#if ASSERT_PIN(SERVO5)
	io_clear_output(SERVO5);
#endif
}

IRAM_ATTR void mcu_itp_isr(void)
{
	mcu_gen_step();
	mcu_gen_pwm_and_servo();
	mcu_gen_oneshot();
#if defined(IC74HC595_HAS_STEPS) || defined(IC74HC595_HAS_DIRS) || defined(IC74HC595_HAS_PWMS) || defined(IC74HC595_HAS_SERVOS)
	ic74hc595_shift_io_pins();
#endif
}

void mcu_init(void)
{
	esp8266_global_isr = 0;
	mcu_io_init();
#ifndef RAM_ONLY_SETTINGS
	esp8266_eeprom_init(NVM_STORAGE_SIZE); // 2K Emulated EEPROM
#endif

	esp8266_uart_init(BAUDRATE);

	// init rtc
	os_timer_setfn(&esp8266_rtc_timer, (os_timer_func_t *)&mcu_rtc_isr, NULL);
	os_timer_arm(&esp8266_rtc_timer, 1, true);

	// init timer1
	timer1_isr_init();
	timer1_attachInterrupt(mcu_itp_isr);
	timer1_enable(TIM_DIV1, TIM_EDGE, TIM_LOOP);
	timer1_write((APB_CLK_FREQ / ITP_SAMPLE_RATE));

#ifdef MCU_HAS_SPI
	esp8266_spi_init(SPI_FREQ, SPI_MODE);
#endif

#ifdef MCU_HAS_I2C
	i2c_master_gpio_init();
	i2c_master_init();
#endif
}

void esp8266_delay_us(uint16_t delay)
{
	uint32_t time = system_get_time() + delay - 1;
	while (time > system_get_time())
		;
}

void mcu_dotasks(void)
{
	// reset WDT
	system_soft_wdt_feed();
	esp8266_uart_process();
}

void mcu_start_timeout()
{
	esp8266_oneshot_counter = esp8266_oneshot_reload;
}
